xee-xpath/tests/snapshots/xpath__default_position_no_context.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"fn:position()\")"
---
Err(
    XPDY0002S {
        src: "fn:position()",
        span: SourceSpan {
            offset: SourceOffset(
                0,
            ),
            length: 13,
        },
    },
)
