xee-xpath/tests/snapshots/xpath__default_position_with_operation.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"fn:position() + 1\")"
---
Err(
    SpannedComponentAbsentInDynamicContext {
        src: "fn:position() + 1",
        span: SourceSpan {
            offset: SourceOffset(
                0,
            ),
            length: 17,
        },
    },
)
