xee-xpath/tests/snapshots/xpath__empty_sequence.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"()\")"
---
Ok(
    Sequence {
        stack_value: Empty,
    },
)
