xee-xpath/tests/snapshots/xpath__fn_double_slash_root_implicit.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run_xml(r#\"<doc><a/><b><c/></b></doc>\"#, \"//a / fn:local-name()\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                String(
                    String,
                    "a",
                ),
            ),
        ),
    },
)
