xee-xpath/tests/snapshots/xpath__fn_root.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run_xml(r#\"<doc><a/><b><c/></b></doc>\"#,\n    \"doc/a / fn:root() / doc / fn:local-name()\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                String(
                    String,
                    "doc",
                ),
            ),
        ),
    },
)
