xee-xpath/tests/snapshots/xpath__fn_root_absent.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"fn:root()\")"
---
Err(
    SpannedComponentAbsentInDynamicContext {
        src: "fn:root()",
        span: SourceSpan {
            offset: SourceOffset(
                0,
            ),
            length: SourceOffset(
                9,
            ),
        },
    },
)
