xee-xpath/tests/snapshots/xpath__fn_string.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run_xml(r#\"<doc><p>Hello world!</p></doc>\"#, \"/doc/p/string()\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                String(
                    String,
                    "Hello world!",
                ),
            ),
        ),
    },
)
