xee-xpath/tests/snapshots/xpath__for_loop.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"for $x in 1 to 5 return $x + 2\")"
---
Ok(
    Sequence {
        stack_value: Many(
            [
                Atomic(
                    Integer(
                        Integer,
                        3,
                    ),
                ),
                Atomic(
                    Integer(
                        Integer,
                        4,
                    ),
                ),
                Atomic(
                    Integer(
                        Integer,
                        5,
                    ),
                ),
                Atomic(
                    Integer(
                        Integer,
                        6,
                    ),
                ),
                Atomic(
                    Integer(
                        Integer,
                        7,
                    ),
                ),
            ],
        ),
    },
)
