xee-xpath/tests/snapshots/xpath__function_closure.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"function() { let $x := 3 return function() { $x + 2 } }()()\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Integer(
                    Integer,
                    5,
                ),
            ),
        ),
    },
)
