xee-xpath/tests/snapshots/xpath__function_closure_nested.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"function() { let $x := 3 return function() { let $y := 4 return function() { $x + $y }} }()()()\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Integer(
                    Integer,
                    7,
                ),
            ),
        ),
    },
)
