xee-xpath/tests/snapshots/xpath__function_nested.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"function($x) { function($y) { $y + 2 }($x + 1) } (5)\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Integer(
                    Integer,
                    8,
                ),
            ),
        ),
    },
)
